<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/main_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        tools:context="com.example.user.bmicalculator.MainActivity"
        android:orientation="vertical"
        android:focusableInTouchMode="true">

    <!--height Layout-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/height"
                android:id="@+id/textView"
                android:textColor="#000000"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:ems="4"
                android:maxLength="4"
                android:maxLines="1"
                android:hint="@string/height_hint"
                android:id="@+id/eHeightText"
                android:enabled="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/cm"
                android:id="@+id/textView3"
                android:textColor="#000000"/>
    </LinearLayout>

    <!--Weight Layout-->
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/weight"
                android:id="@+id/textView2"
                android:textColor="#000000"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:inputType="number"
                android:ems="4"
                android:maxLength="4"
                android:maxLines="1"
                android:hint="@string/weight_hint"
                android:id="@+id/eWeightText"
                android:enabled="true"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/kg"
                android:id="@+id/textView4"
                android:textColor="#000000"/>
    </LinearLayout>

    <!--Calculate Button-->
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:text="@string/Calc"
            android:id="@+id/CalcButton"
            android:layout_gravity="center_horizontal"/>

    <!--Show BMI-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:id="@+id/ResultNavigation"
            android:textColor="#000000"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:textSize="40sp"
            android:id="@+id/ResultText"
            android:textColor="#ff5555"/>

    <!--Show your best weight-->
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/BestWeightNavi"
            android:id="@+id/BestWeightNavigation"
            android:visibility="invisible"
            android:textColor="#000000"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text=""
            android:textSize="40sp"
            android:id="@+id/BestWeightText"
            android:textColor="#ff5555"/>

</LinearLayout>
